# nbgrader-codeextractor

./: .project  README.md  pyproject.toml
nbgExtract/: __init__.py  cells.py  nbgCode_cmd.py  notebook.py
nbgExtract/resources/: default_python_template.tpy  try_catch_python_template.jinja  try_catch_python_template.tpy  unittest_template.jinja  unittest_template.tpy
scripts/: test
tests/: test_code_extraction.py
tests/resources/: nbgrader_cell_types.ipynb
tests/resources/python_addition/: python_addition_correct_submission.ipynb  python_addition_release.ipynb  python_addition_source.ipynb
